# deepseek-tokenizer

./: README.md  README_ZH.md  pyproject.toml
.github/workflows/: release.yml
src/deepseek_tokenizer/: __init__.py  py_tokenizer.py
tests/: test_simple.py
